@@ -568,6 +568,10 @@ public class Realm {
 
     /**
      * Starts a write transaction, this must be closed with commitTransaction()
+     * Notice: it is not possible to nest write transactions. If you try to start a write
+     * transaction within a write transaction will lead to an exception to be thrown.
+     *
+     * @throws io.realm.exceptions.RealmException If already a write transaction
      * @throws java.lang.RuntimeException Any other error
      */
     public void beginTransaction() {
